FIX: Disable scrollbar in carousel

--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,12 @@
   --text-color: #212529;
 }
 
-
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
